# delto_tecnica_1

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: data.db  db.sqlite  init.sql
src/: ai_response.py  commands.py  count_response.py  default_response.py  errors.py  location_response.py  main.py  weather_response.py
src/apis/: openweather.py  openweather_get_response_codegen.py
src/db/: helpers.py  queries.py
src/groq_helpers/: utils.py
src/handlers/: ai.py  count.py  error.py  location.py  start.py  weather.py
